# qer-pi

./: .gitignore  .python-version  CITATION.cff  LICENSE  README.md  cptp_cartoon_fixed.tex  pyproject.toml  setup.py
.github/workflows/: tests.yml
.matplotlib-cache/: fontlist-v390.json
codes/: TrX.m  code.m  codes.m  no_recovery.m  noisemodel.m  optimisation.m  project2.m  recovery.m
datas/: global_amp_damp_new_codes_results.csv  global_amp_damp_results.csv  local_amp_damp_new_codes_results.csv  local_amp_damp_results.csv
datas/final_gpg_pulses/: README.md
datas/noiseless_gpgs_pulses/: README.md  all_pulses.csv  manifest.csv  summary_by_point_and_factor.csv
datas/noisy_gpgs_pulses/: README.md  all_pulses.csv  detuned_usual_gpg_p5e-4_p1e-3_Csweep_metrics.csv  improving_noisy_gpg_detuned_adaptive_pulses_metrics.csv  improving_noisy_gpg_detuned_warmstart_variable_pulses_metrics.csv  improving_noisy_gpg_three_pulse_detuned_metrics.csv  improving_noisy_gpg_three_pulse_detuned_warmstart_metrics.csv  manifest.csv  metrics.csv  summary_by_point_and_factor.csv
docs/: data.md  data_and_figures.md  paper.md  release_checklist.md  testing.md  usage.md
examples/: README.md  basic_recovery.ipynb  finding_optimal_pulses.ipynb  load_final_gpg_pulses.ipynb
matlab/codes/: code.m  codewords.m  col_rho.m  collective_apply_local_noise.m  noisemodel.m  optimisation.m  prep_uniform_dicke.m  recovery_new.m  state_prepe_gpg.m
matlab/notebooks/: bgm_vs_four_qubit.mlx  four_qubit_vs_22bg.mlx  gross_13.mlx
mosek/: mosek.lic
notebooks/: README.md  amp_damp.ipynb  bgm_comparsion.ipynb  bk_recovery.ipynb  example.mlx  final_plots.ipynb  gnu_vs_bgm.ipynb  gross.ipynb  improving_noisy_gpg.ipynb  local_amp_damp.ipynb  new_codes_amp_damp.ipynb  penalty.ipynb
notebooks/stale/: constructing_untaries.ipynb  global_amp_damp.ipynb  noisy_gpg.ipynb  seven_qubit_vs_bgm.ipynb
other/: cptp_cartoon_fixed.tex
paper_plots/: README.md  load_final_gpg_pulses.ipynb
plots/: b=g=3.fig  four_qubit_vs_22bg_code.fig
python/: codewords.py  noisemodel.py  non_markovian.py  optimisation.py  setup.py  testing.ipynb
python/codes/: codewords.py  (+4 more)
qer_env/: pyvenv.cfg
scripts/: parallel_noisy_gpg_search.py  refine_gpg_spikes.py
tests/: test_codewords.py  test_examples.py  test_final_gpg_pulses.py  test_optimisation.py
(+1024 files in other folders)
